# test-api-rust-actix

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  policy.csv
configuration/: base.yaml
migrations/: 0001_init_schema.up.sql  0002_add_roles.down.sql  0002_add_roles.up.sql  0002_forgot_password_tokens_table.down.sql  0002_forgot_password_tokens_table.up.sql  0003_insert_roles.up.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: casbin_middleware.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/domain/: forgot_password.rs  mod.rs  user.rs
src/routes/: mod.rs
src/routes/forgot_password/: mod.rs  post.rs
src/routes/login/: mod.rs  post.rs
src/routes/register/: mod.rs  post.rs
src/routes/user/: get.rs
